--- a/index.html
+++ b/index.html
@@ -4,10 +4,44 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="highcharts.js"></script>
+    <scripe type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <scripe type="text/javascript" src="bootstrap/js/underscore.js"></script>
     <link type="text/css" rel="stylesheet" href="styles.css">
+    <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <title>TransView</title>
   </head>
   <body>
-
+  <div class="navbar navbar-inverse navbar-fixed-top" id="nav-bar">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="javascript:void(0)">TransView</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active">
+                <a href="javascript:void(0)">监测主题</a>
+              </li>
+              <li>
+                <a href="javascript:void(0)">社交网络</a>
+              </li>
+              <li>
+                <a href="javascript:void(0)">监控微博</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
+  <script>
+    var network_id = "512b3960b1894c461507d1ec";
+    var openname = "liz.lihs@gmail.com";
+    var open_access_token = "3f3c2a0fc9784f8e70cc6828a3a50b934f97eb45";
+    var group_id = "5141fbb507ea451e9db9f224";
+  </script>
+  <script></script>
 </html>
