--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active">
-                <a href="javascript:void(0)">监测主题</a>
+                <a href="javascript:void(0)" data-module="listen">监测主题</a>
               </li>
               <li>
-                <a href="javascript:void(0)">社交网络</a>
+                <a href="javascript:void(0)" data-module="socialnet">社交网络</a>
               </li>
               <li>
-                <a href="javascript:void(0)">监控微博</a>
+                <a href="javascript:void(0)" data-module="monitor">监控微博</a>
               </li>
             </ul>
           </div>
@@ -43,5 +43,5 @@
     var open_access_token = "3f3c2a0fc9784f8e70cc6828a3a50b934f97eb45";
     var group_id = "5141fbb507ea451e9db9f224";
   </script>
-  <script></script>
+  <script src="main.js"></script>
 </html>
