--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="utf-8" />
+    <meta content="yes" name="apple-mobile-web-app-capable"/>
+    <link rel="apple-touch-icon" href="favicon.png"/>
+    <link rel="Shortcut Icon" href="favicon.png" type="image/x-icon"> 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="highcharts.js"></script>
     <scripe type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
