--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
   <div class="navbar navbar-inverse navbar-fixed-top" id="nav-bar">
-      <div class="navbar-inner">
+    <div class="navbar-inner">
         <div class="container">
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
@@ -37,14 +37,18 @@
             </ul>
           </div>
         </div>
-      </div>
     </div>
+  </div>
   </body>
   <script>
     var network_id = "512b3960b1894c461507d1ec";
     var openname = "liz.lihs@gmail.com";
     var open_access_token = "3f3c2a0fc9784f8e70cc6828a3a50b934f97eb45";
     var group_id = "5141fbb507ea451e9db9f224";
+    var serverHost = "http://116.213.213.93:8080/social_api"
   </script>
   <script src="main.js"></script>
+  <script type="text/template" id="tpl-socialnet">
+    <script src=></script>
+  </script>
 </html>
