--- a/index.html
+++ b/index.html
@@ -4,41 +4,42 @@
     <meta charset="utf-8" />
     <meta content="yes" name="apple-mobile-web-app-capable"/>
     <link rel="apple-touch-icon" href="favicon.png"/>
-    <link rel="Shortcut Icon" href="favicon.png" type="image/x-icon"> 
+    <link rel="Shortcut Icon" href="favicon.png" type="image/x-icon"/> 
+
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="highcharts.js"></script>
-    <scripe type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-    <scripe type="text/javascript" src="bootstrap/js/underscore.js"></script>
-    <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="underscore.js"></script>
+    <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
     <link type="text/css" rel="stylesheet" href="styles.css">
     <title>TransView</title>
   </head>
   <body>
-  <div class="navbar navbar-inverse navbar-fixed-top" id="nav-bar">
-    <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="javascript:void(0)">TransView</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active">
-                <a href="javascript:void(0)" data-module="listen">监测主题</a>
-              </li>
-              <li>
-                <a href="javascript:void(0)" data-module="socialnet">社交网络</a>
-              </li>
-              <li>
-                <a href="javascript:void(0)" data-module="monitor">监控微博</a>
-              </li>
-            </ul>
+    <div class="navbar navbar-inverse navbar-fixed-top" id="nav-bar">
+      <div class="navbar-inner">
+          <div class="container">
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="brand" href="javascript:void(0)">TransView</a>
+            <div class="nav-collapse collapse">
+              <ul class="nav">
+                <li class="active">
+                  <a href="javascript:void(0)" data-module="listen">监测主题</a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" data-module="socialnet">社交网络</a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" data-module="monitor">监控微博</a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
+      </div>
     </div>
-  </div>
   </body>
   <script>
     var network_id = "512b3960b1894c461507d1ec";
@@ -48,7 +49,16 @@
     var serverHost = "http://116.213.213.93:8080/social_api"
   </script>
   <script src="main.js"></script>
+  <script type="text/template" id="tpl-listen">
+    <div>1</div>
+    <script src="listen.js"></script>
+  </script>
   <script type="text/template" id="tpl-socialnet">
-    <script src=></script>
+    <div>2</div>
+    <script src="socialnet.js"></script>
+  </script>
+  <script type="text/template" id="tpl-monitor">
+    <div>3</div>
+    <script src="monitor.js"></script>
   </script>
 </html>
