--- a/socialnet.html
+++ b/socialnet.html
@@ -48,4 +48,5 @@
   <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="underscore.js"></script>
   <script src="main.js"></script>
+  <script src=""></script>
 </html>
