added account list

--- a/socialnet.html
+++ b/socialnet.html
@@ -10,6 +10,9 @@
     <title>TransView</title>
   </head>
   <body>
+  <div class="content"  class="span12">
+    <ul id="account-list"></ul>
+  </div> 
    <div class="bottom-bar">
     <ul>
       <li class="active">
