--- a/monitor.html
+++ b/monitor.html
@@ -10,31 +10,22 @@
     <title>TransView</title>
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" id="nav-bar">
-      <div class="navbar-inner">
-          <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="brand" href="javascript:void(0)">TransView</a>
-            <div class="nav-collapse collapse">
-              <ul class="nav">
-                <li>
-                  <a href="index.html" data-module="listen">监测主题</a>
-                </li>
-                <li>
-                  <a href="socialnet.html" data-module="socialnet">社交网络</a>
-                </li>
-                <li class="active">
-                  <a href="monitor.html" data-module="monitor">监控微博</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-      </div>
-    </div>
+  <div class="content"  class="span12">
+    <ul id="account-list"></ul>
+  </div> 
+   <div class="bottom-bar">
+    <ul>
+      <li>
+        <a href="socialnet.html"><i class="icon-user"></i>社交网络</a>
+      </li>
+      <li class="active">
+        <a href="index.html"><i class="icon-home"></i>监测主题</a>
+      </li>
+      <li>
+        <a href="monitor.html"><i class="icon-search"></i>监控微博</a>
+      </li>
+    </ul>
+   </div>
   </body>
   <script>
     var network_id = "512b3960b1894c461507d1ec";
@@ -48,4 +39,5 @@
   <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="underscore.js"></script>
   <script src="main.js"></script>
+  <script src="socialnet.js"></script>
 </html>
