--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <title>TransView</title>
   </head>
   <body>
-  <div class="content"  class="span12">
+  <div class="content" id="account-pane">
     <ul id="account-list"></ul>
   </div> 
+  <div class="content" id="weibo-pane"></div>
    <div class="bottom-bar">
     <ul>
       <li>
