added new icons

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <link rel="apple-touch-icon" href="favicon.png"/>
     <link rel="Shortcut Icon" href="favicon.png" type="image/x-icon"/> 
     <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
     <link type="text/css" rel="stylesheet" href="styles.css">
     <title>TransView</title>
   </head>
   <body>
   <div class="content" id="account-pane">
-    <ul id="account-list"></ul>
+    <ul id="account-list">
+      <li class="btn">账号列表</li>
+    </ul>
   </div> 
   <div class="content" id="weibo-pane"></div>
    <div class="bottom-bar">
