--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
   <body>
   <div class="content" id="account-pane">
     <ul id="account-list">
-      <li class="btn">账号列表</li>
+      <li class="btn title"><i class="icon-group"></i>账号列表</li>
     </ul>
   </div> 
   <div class="content" id="weibo-pane"></div>
    <div class="bottom-bar">
     <ul>
-      <li>
-        <a href="index.html"><i class="icon-user"></i>社交网络</a>
+      <li class="active">
+        <a href="javascript:void(0)"><i class="icon-user"></i>社交网络</a>
       </li>
       <li class="active">
-        <a href="socialnet.html"><i class="icon-home"></i>监测主题</a>
+        <a href="javascript:void(0)"><i class="icon-home"></i>监测主题</a>
       </li>
       <li>
-        <a href="monitor.html"><i class="icon-search"></i>监控微博</a>
+        <a href="javascript:void(0)"><i class="icon-search"></i>监控微博</a>
       </li>
     </ul>
    </div>
