--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
     <link type="text/css" rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
     <link type="text/css" rel="stylesheet" href="styles.css">
-    <link type="text/css" rel="stylesheet" href="status.css">
+    <link type="text/css" rel="stylesheet" href="statuses.css">
     <title>TransView</title>
   </head>
   <body>
@@ -18,7 +18,6 @@
     </ul>
   </div> 
   <div class="content" id="weibo-pane" style="display:none">
-  <div class="btn title">
     <select id="timeline-select">
       <option value="home_statuses">我的首页</option>
       <option value="mention_statuses">@我的微博</option>
@@ -27,7 +26,6 @@
       <option value="accounts_statuses">发布的微博</option>
       <option value="comments_by_me">发出的评论</option>
     </select>
-  </div>
   <div class="weibo-list">
 
   </div>
@@ -46,19 +44,6 @@
     </ul>
    </div>
   </body>
-  <script>
-    var network_id = "512b3960b1894c461507d1ec";
-    var openname = "liz.lihs@gmail.com";
-    var open_access_token = "3f3c2a0fc9784f8e70cc6828a3a50b934f97eb45";
-    var group_id = "5141fbb507ea451e9db9f224";
-    var serverHost = "http://116.213.213.93:8080/social_api"
-  </script>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script type="text/javascript" src="highcharts.js"></script>
-  <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="underscore.js"></script>
-  <script src="main.js"></script>
-  <script src="socialnet.js"></script>
 <script type="text/template" id="Tmp-status">
   <div class="Status-single" is-comment="<%= is_comment %>" data-id="<%= id %>" data-platform="<%= platform %>" action-source = "<%= action_source %>" data-type="<%= data_type %>" action-send-id="<%= action_send_id %>">
     <div class="S-face">
@@ -212,4 +197,25 @@
     </div>
   </div>
 </script>
+<script type="text/template" id="tpl-permission">
+            <div>
+              <div class="comment">true</div>
+              <div class="monitor">true</div>
+              <div class="repost">true</div>
+              <div class="assign">true</div>
+            </div>
+          </script> 
+  <script>
+    var network_id = "512b3960b1894c461507d1ec";
+    var openname = "liz.lihs@gmail.com";
+    var open_access_token = "3f3c2a0fc9784f8e70cc6828a3a50b934f97eb45";
+    var group_id = "5141fbb507ea451e9db9f224";
+    var serverHost = "http://116.213.213.93:8080/social_api"
+  </script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script type="text/javascript" src="highcharts.js"></script>
+  <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="underscore.js"></script>
+  <script src="main.js"></script>
+  <script src="socialnet.js"></script>
 </html>
