added loading module

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       </li>
     </ul>
    </div>
+    <div class="modal hide fade" id="page_mask" style="margin-top:300px">
+      <div class="modal-body" style="border-radius:5px;text-align:center;">
+        <p><i class="icon-spinner icon-spin"></i>&nbsp;&nbsp;数据加载中...</p>
+      </div>
+   </div>
   </body>
 <script type="text/template" id="Tmp-status">
   <div class="Status-single" is-comment="<%= is_comment %>" data-id="<%= id %>" data-platform="<%= platform %>" action-source = "<%= action_source %>" data-type="<%= data_type %>" action-send-id="<%= action_send_id %>">
