--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li class="btn title"><i class="icon-group"></i>账号列表</li>
     </ul>
   </div> 
-  <div class="content" id="weibo-pane">
+  <div class="content" id="weibo-pane" style="display:none">
     <select id="timeline-select">
       <option value="home_statuses">我的首页</option>
       <option value="mention_statuses">@我的微博</option>
