--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </ul>
    </div>
     <div class="modal hide fade" id="page_mask" style="margin-top:300px">
-      <div class="modal-body" style="border-radius:5px;text-align:center;">
+      <div class="modal-body" style="border-radius:5px;text-align:center;font-size:3em">
         <p><i class="icon-spinner icon-spin"></i>&nbsp;&nbsp;数据加载中...</p>
       </div>
    </div>
