--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <div class="weibo-list">
 
       </div>
+      <div id="return-aclist">
+        <i class="icon-undo"></i>
+      </div>
     </div>
   </div>
   <div id="pane-monitor" class="pane">
@@ -40,13 +43,13 @@
    <div class="bottom-bar">
     <ul>
       <li class="active">
-        <a href="javascript:void(0)"><i class="icon-user"></i>社交网络</a>
+        <a href="javascript:void(0)" data-pane="socialnet"><i class="icon-user"></i>社交网络</a>
       </li>
       <li>
-        <a href="javascript:void(0)"><i class="icon-home"></i>监测主题</a>
+        <a href="javascript:void(0)" data-pane="listen"><i class="icon-home"></i>监测主题</a>
       </li>
       <li>
-        <a href="javascript:void(0)"><i class="icon-search"></i>监控微博</a>
+        <a href="javascript:void(0)" data-pane="monitor"><i class="icon-search"></i>监控微博</a>
       </li>
     </ul>
    </div>
