--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
   </div>
   <div id="pane-monitor" class="pane">
     <div class="content">
-      <div></div>
+      <select id="status-select"></select>
+      <div class="trans-detail"></div>
     </div>
   </div>
    <div class="bottom-bar">
