--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
     </div>
   </div>
-  <div id="pane-monitor" class="pane">
+  <div id="pane-monitor" class="pane" style="display:none">
     <div class="content">
       <select id="status-select"></select>
       <div class="trans-detail"></div>
