--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
   <div id="pane-monitor" class="pane" style="display:none">
     <div class="content">
       <select id="status-select"></select>
-      <div class="trans-detail"></div>
+      <div id="trans-detail">
+
+      </div>
     </div>
   </div>
    <div class="bottom-bar">
