--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </ul>
           <div class="tab-content">
             <div class="tab-pane active" id="transmission">
-              <div class="btn title">传播分析</div>
+              <h5 class="btn title">传播分析</h5>
               <div id="travel-path" class="travel-path" style="overflow:hidden">
                 <canvas class="canvas-bg"></canvas>
                 <canvas class="canvas-lines"></canvas>
