added travel tend

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </ul>
           <div class="tab-content">
             <div class="tab-pane active" id="transmission">
-              <h5 class="btn title">传播分析</h5>
+              <div class="btn title">传播分析</div>
               <div id="travel-path" class="travel-path" style="overflow:hidden">
                 <canvas class="canvas-bg"></canvas>
                 <canvas class="canvas-lines"></canvas>
@@ -57,6 +57,8 @@
                 <div class="label-highlight" id="label-highlight"></div>
                 <div class="loading" id="loading">loading data...</div>
               </div>
+              <div class="btn title">传播趋势</div>
+              <div id="travel-tend"></div>
             </div>
             <div class="tab-pane" id="analysis">
             </div>
