added source image

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <div class="label-highlight" id="label-highlight"></div>
                 <div class="loading" id="loading">loading data...</div>
               </div>
-              <div class="btn title">传播趋势</div>
-              <div id="travel-tend"></div>
+              <div class="btn title">来源分布</div>
+              <div id="source-tend"></div>
             </div>
             <div class="tab-pane" id="analysis">
             </div>
