added 2 pie charts

--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
               </div>
               <div class="btn title">来源分布</div>
               <div id="source-tend"></div>
+
             </div>
             <div class="tab-pane" id="analysis">
+              <div class="btn title">用户属性</div>
+              <div id="comments-gender-dist"></div>
+              <div id="comments-verify-dist"></div>
             </div>
           </div>
         </div> 
