added chart size

--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
 
             </div>
             <div class="tab-pane" id="analysis">
-              <div class="btn title">用户属性</div>
+              <div class="btn title">用户属性(评论)</div>
               <div id="comments-gender-dist"></div>
               <div id="comments-verify-dist"></div>
+              <div class="btn title">用户属性(转发)</div>
+              <div id="reposts-gender-dist"></div>
+              <div id="comments-verify-dist"></div>
+              <div class="btn-title">地域分布(评论)</div>
+              <div id="comments-location-dist"></div>
             </div>
           </div>
         </div> 
