--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
               <div id="comments-verify-dist"></div>
               <div class="btn title">用户属性(转发)</div>
               <div id="reposts-gender-dist"></div>
-              <div id="comments-verify-dist"></div>
-              <div class="btn-title">地域分布(评论)</div>
+              <div id="reposts-verify-dist"></div>
+              <div class="btn title">地域分布(评论)</div>
               <div id="comments-location-dist"></div>
+              <div class="btn title">地域分布(转发)</div>
+              <div id="reposts-location-dist"></div>
             </div>
           </div>
         </div> 
