--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
    <div class="bottom-bar">
     <ul>
       <li class="active">
-        <a href="javascript:void(0)" data-pane="socialnet"><i class="icon-user"></i>社交网络</a>
+        <a href="javascript:void(0)" data-pane="socialnet"><i class="icon-user"></i></a>
       </li>
       <li>
-        <a href="javascript:void(0)" data-pane="listen"><i class="icon-home"></i>监测主题</a>
+        <a href="javascript:void(0)" data-pane="listen"><i class="icon-home"></i></a>
       </li>
       <li>
-        <a href="javascript:void(0)" data-pane="monitor"><i class="icon-search"></i>监控微博</a>
+        <a href="javascript:void(0)" data-pane="monitor"><i class="icon-search"></i></a>
       </li>
     </ul>
    </div>
